package com.example.courseschedule.exception;


public class NotFoundException extends RuntimeException {
 public NotFoundException(String message) {
     super(message);
 }
}

